fix(comments): comment box, fix comment box comment overflow breaking page

--- a/app/assets/stylesheets/commontator.scss
+++ b/app/assets/stylesheets/commontator.scss
@@ -18,6 +18,8 @@
   background-color: $card-green;
   margin-top: 15px;
   padding: 10px 20px;
+  overflow-wrap: break-word;
+  hyphens: auto;
 }
 
 .avatar {
